# TCU_Nova_OBD_Test_SW

./: .gitignore  CMakeLists.txt  README.md  sdkconfig
.claude/: settings.local.json
main/: CMakeLists.txt  cmd_handler.c  cmd_handler.h  config.h  idf_component.yml  main.c  state_machine.c  state_machine.h
main/periph/: can_bus.c  can_bus.h  gpio_cmd.c  gpio_cmd.h  imu.c  imu.h  led.c  led.h  modem.c  modem.h  sdcard.c  sdcard.h  uwb.c  uwb.h
tools/: serial_console.py  serial_gui.py
