idf_component_register(
    SRCS
        "main.c"
        "state_machine.c"
        "cmd_handler.c"
        "periph/led.c"
        "periph/imu.c"
        "periph/can_bus.c"
        "periph/sdcard.c"
        "periph/uwb.c"
        "periph/modem.c"
    INCLUDE_DIRS
        "."
    REQUIRES
        led_strip
        esp_driver_twai
        esp_driver_spi
        esp_driver_gpio
        esp_driver_uart
        esp_timer
        fatfs
        sdmmc
        esp_driver_sdspi
)
